@@ -68,7 +68,7 @@ namespace Little_Registry_Cleaner.Scanners
 
                     if (rk2 != null)
                     {
-                        ScanDlg.UpdateScanningObject(rk2.ToString());
+                        ScanDlg.CurrentScannedObject = rk2.ToString();
 
                         string strSoundPath = rk2.GetValue("") as string;
 
@@ -83,7 +83,7 @@ namespace Little_Registry_Cleaner.Scanners
                     RegistryKey rk2 = rk.OpenSubKey(strSubKey);
                     if (rk2 != null)
                     {
-                        ScanDlg.UpdateScanningObject(rk2.ToString());
+                        ScanDlg.CurrentScannedObject = rk2.ToString();
                         ParseSoundKeys(rk2);
                     }
                 }
